syntax = "proto3";
package client;

import "error.proto";
import "model.proto";

option go_package = "github.com/connet-dev/connet/proto/pbclient";

message Authenticate {
  string token = 1;
  bytes reconnect_token = 2;
  string build_version = 3;
}

message AuthenticateResp {
  error.Error error = 1;

  model.AddrPort public = 2;
  bytes reconnect_token = 3;
}

message Request {
  // Soft one-of
  Announce announce = 1;
  Relay relay = 2;

  message Announce {
    model.Endpoint endpoint = 1;
    model.Role role = 2;
    Peer peer = 3;
  }
  message Relay {
    model.Endpoint endpoint = 1;
    model.Role role = 2;
    bytes client_certificate = 3; // certificate to use when connecting to a relay
  }
}

message Response {
  error.Error error = 1;

  // Soft one-of if error is nil
  Announce announce = 2;
  Relays relay = 3;

  message Announce {
    repeated RemotePeer peers = 1;
  }
  message Relays {
    repeated Relay relays = 1;
  }
}

message Peer {
  repeated model.AddrPort directs = 3;
  repeated string relayIds = 6;
  bytes server_certificate = 4; // certificate to use when connecting to this client
  bytes client_certificate = 5; // certificate that this client uses when connecting
}

message RemotePeer {
  string id = 1;
  Peer peer = 8;
}

message Relay {
  string id = 3;
  repeated model.HostPort addresses = 4;
  bytes server_certificate = 2;
}
